# django_app_stock_analysis

./: manage.py  pyproject.toml  utils.py
api/: urls.py  views.py
django_app_stock_analysis/: asgi.py  settings.py  urls.py  wsgi.py
