[tool.poetry]
name = "django-app-stock-analysis"
version = "0.1.0"
description = ""
authors = ["ryanalvita <ryanalvita@yahoo.com>"]
readme = "README.md"
packages = [{include = "django_app_stock_analysis"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
