[tool.poetry]
name = "django-app-stock-analysis"
version = "0.1.0"
description = ""
authors = ["ryanalvita <ryanalvita@yahoo.com>"]
readme = "README.md"
packages = [{include = "django_app_stock_analysis"}]

[tool.poetry.dependencies]
python = "^3.7"
django = "^4.1.3"
pymongo = "^4.3.3"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
